# discord-withings

./: Makefile  manage.py  pyproject.toml
bot/: apps.py  bot.py  tmp_fixture.py  utils.py
oauth/: models.py  views.py
oauth/migrations/: 0001_initial.py  0002_oauthuser_discord_id_oauthuser_discord_mention.py
sleep/: asgi.py  settings.py  urls.py  wsgi.py
